--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "slicman": "./index.js"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "debug": "^2.6.1",
     "fs-extra": "^2.0.0",
